--- a/docs/device/kn550.md
+++ b/docs/device/kn550.md
@@ -1,5 +1,22 @@
 # KN550
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
+<Tabs>
+  <TabItem value="android" label="Android" default>
+
+#### Android Doc
+
+  </TabItem>
+  
+  <TabItem value="ios" label="iOS">
+
+#### iOS Doc
+
+  </TabItem>
+  
+  <TabItem value="reactnative" label="React Native">
 ## import KN550 module
 
 ```js
@@ -112,3 +129,6 @@ iHealthDeviceManagerModule.getDevicesIDPS(mac, (event) => {
 ```js
 BP550BTModule.getAllConnectedDevices();
 ```
+
+  </TabItem>
+</Tabs>
