--- a/docs/device/blood_pressure/kn550.md
+++ b/docs/device/blood_pressure/kn550.md
@@ -20,13 +20,13 @@ import TabItem from '@theme/TabItem';
 ### 1.Listen to device notify
 
 ```java
-int callbackId = iHealthDevicesManager.getInstance().registerClientCallback(new iHealthDevicesCallback() {
+private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallback() {
     
     @Override
     public void onScanDevice(String mac, String deviceType, int rssi, Map manufactorData) { }
 
     @Override
-    public void onDeviceConnectionStateChange(String mac, String deviceType, int status, int errorID, Map manufactorData) { }
+    public void onDeviceConnectionStateChange(String mac, String deviceType, int status, int errorID, Map manufactorData){ }
 
     @Override
     public void onScanError(String reason, long latency) { }
@@ -35,9 +35,10 @@ int callbackId = iHealthDevicesManager.getInstance().registerClientCallback(new 
     public void onScanFinish() { }
 
     @Override
-    public void onDeviceNotify(String mac, String deviceType, String action, String message) { }
-});
-
+    public void onDeviceNotify(String mac, String deviceType,
+                                String action, String message) { }
+}
+int callbackId = iHealthDevicesManager.getInstance().registerClientCallback(miHealthDevicesCallback);
 iHealthDevicesManager.getInstance().addCallbackFilterForDeviceType(callbackId, iHealthDevicesManager.TYPE_550BT);
 iHealthDevicesManager.getInstance().addCallbackFilterForAddress(callbackId, String... macs)
 ```
@@ -59,6 +60,8 @@ Bp550BTControl control = iHealthDevicesManager.getInstance().getBp550BTControl(m
 ## API reference
 
 ### Get the device battery
+
+The KN-550BT doesn't support this feature above firmware 2.0.0 or later.
 
 ```java
 Bp550BTControl control = iHealthDevicesManager.getInstance().getBp550BTControl(mDeviceMac);
