--- a/docs/main/home/introduction.mdx
+++ b/docs/main/home/introduction.mdx
@@ -41,13 +41,13 @@ iHealth SDK is a API for connection and managing iHealth devices in mobile appli
 
 <div className="grid xl:grid-cols-3">
   <div className="xl:col-span-1">
-    <img src="../../../static/img/doc_index_1.svg" style={{ width: 200, height: 150 }} />
+    <img src="../../../static/img/doc_index_1.png" style={{ width: 200, height: 150 }} />
   </div>
   <div className="xl:col-span-1">
-    <img src="../../../static/img/doc_index_2.svg" style={{ width: 200, height: 150 }} />
+    <img src="../../../static/img/doc_index_2.png" style={{ width: 200, height: 150 }} />
   </div>
   <div className="xl:col-span-1">
-    <img src="../../../static/img/doc_index_3.svg" style={{ width: 200, height: 150 }} />
+    <img src="../../../static/img/doc_index_3.png" style={{ width: 200, height: 150 }} />
   </div>
 </div>
 
