修改了图片路径

--- a/android_versioned_docs/version-2.9.9/quickstart.mdx
+++ b/android_versioned_docs/version-2.9.9/quickstart.mdx
@@ -7,38 +7,38 @@ sidebar_position: 1
 ## Step 1: register your account
 
 Please access [iHealth developer website](https://dev.ihealthlabs.com).
-![ready1](/img/doc_ready_1.png)
+![ready1](/doc_ready_1.png)
 
 Press button "Create an account" and Jump into Register page, fill in the form and register your iHealth developer account.
-![ready2](/img/doc_ready_2.png)
+![ready2](/doc_ready_2.png)
 
 ## Step 2: Create your application
 
 If you already have registered your application, Please jump to Step 3.
 
 If you don't registered your application, Please press the "Enterprise Development" on left side of the page and go to "App Management". Please press button "Add New app" and fill in your information of your app, as shown below.
-![Download](/img/doc_ready_3.png)
-![Download](/img/doc_ready_4.png)
+![Download](/doc_ready_3.png)
+![Download](/doc_ready_4.png)
 
 We will active the license for your application within 1-3 business days after receiving your email. If your app not been approved for long time, Please contact your iHealth account manager.
 
 ## Step 3: Download the SDK and license file
 
 After your app been approved, you can download the SDK solution.
-![Download](/img/doc_ready_5.png)
+![Download](/doc_ready_5.png)
 
 Download .pem file at App Management if your solution need.
-![Download](/img/doc_ready_6.png)
+![Download](/doc_ready_6.png)
 
 ## Step 4: Add license in your application
 
 As shown below, add your license file to your root assets folder.
-![guide android](../../static/img/guide_android_1.png)
+![guide android](/guide_android_1.png)
 
 ## Step 5: Add SDK library and SO file
 
 As shown below, add your SDK jar file and SO file to your project.
-![guide android](../../static/img/guide_android_2.png)
+![guide android](/guide_android_2.png)
 
 For the library project, add the following:
 
