--- a/react-native_versioned_docs/version-1.4.9/quickstart.mdx
+++ b/react-native_versioned_docs/version-1.4.9/quickstart.mdx
@@ -22,17 +22,17 @@ yarn add @ihealth/ihealthlibrary-react-native
 1. Sign up iHealth developer webside. [Please sign up here](https://dev.ihealthlabs.com)
 2. Press "Add New App" button, fill in your information of your app. We will get email and active the license for your app.
 3. Download license file, as shown below.
-![Download](../../static/img/doc_ready_5.png)
+![Download](/doc_ready_5.png)
 
 #### Integrate license file
 
 For iOS
 As shown below, add your license file to your iOS project.
-![integrate ios](../../static/img/guide_ios_1.png)
+![integrate ios](/guide_ios_1.png)
 
 For Android
 As show below, add your license file to your asserts folder.
-![integrate android](../../static/img/guide_android_1.png)
+![integrate android](/guide_android_1.png)
 
 #### Using license file
 
