更新部分文档

--- a/android_versioned_docs/version-2.9.9/blood_pressure/kn550.md
+++ b/android_versioned_docs/version-2.9.9/blood_pressure/kn550.md
@@ -208,7 +208,7 @@ private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallb
     @Override
     public void onDeviceNotify(String mac, String deviceType, String action, String message) {
         if (BpProfile.ACTION_SET_STATUS_DISPLAY_SUCCESS.equals(action)) {
-        
+            Log.i("set display success");
         }
     } 
 }
@@ -226,7 +226,9 @@ control.disconnect();
 private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallback() {
      @Override
     public void onDeviceConnectionStateChange(String mac, String deviceType, int status, int errorID, Map manufactorData) { 
-        
+        if (iHealthDevicesManager.DEVICE_STATE_DISCONNECTED == status) {
+            Log.i("The device is disconnected");
+        }
     }
 }
 ```
