--- a/ios_versioned_docs/version-2.7.7/blood_pressure/kn550.md
+++ b/ios_versioned_docs/version-2.7.7/blood_pressure/kn550.md
@@ -14,41 +14,28 @@ sidebar_position: 6
 ### 1.Listen to device notify
 
 ```java
-private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallback() {
-    
-    @Override
-    public void onScanDevice(String mac, String deviceType, int rssi, Map manufactorData) { }
 
-    @Override
-    public void onDeviceConnectionStateChange(String mac, String deviceType, int status, int errorID, Map manufactorData){ }
+[[NSNotificationCenter defaultCenter]addObserver:self selector:@selector(DeviceDiscover:) name:KN550BTDiscover object:nil];
 
-    @Override
-    public void onScanError(String reason, long latency) { }
+[[NSNotificationCenter defaultCenter]addObserver:self selector:@selector(DeviceConnectFail:) name:KN550BTConnectFailed object:nil];
 
-    @Override
-    public void onScanFinish() { }
+[[NSNotificationCenter defaultCenter]addObserver:self selector:@selector(DeviceConnect:) name:KN550BTConnectNoti object:nil];
 
-    @Override
-    public void onDeviceNotify(String mac, String deviceType,
-                                String action, String message) { }
-}
-int callbackId = iHealthDevicesManager.getInstance().registerClientCallback(miHealthDevicesCallback);
-iHealthDevicesManager.getInstance().addCallbackFilterForDeviceType(callbackId, iHealthDevicesManager.TYPE_550BT);
-iHealthDevicesManager.getInstance().addCallbackFilterForAddress(callbackId, String... macs)
+[[NSNotificationCenter defaultCenter]addObserver:self selector:@selector(DeviceDisConnect:) name:KN550BTDisConnectNoti object:nil];
+            
+[KN550BTController shareKN550BTController];
 ```
 
 ### 2.Scan for KN-550BT devices
 
 ```java
-iHealthDevicesManager.getInstance().startDiscovery(DiscoveryTypeEnum.BP550BT);
+[[ScanDeviceController commandGetInstance] commandScanDeviceType:HealthDeviceType_KN550BT];
 ```
 
 ### 3.Connect to KN-550BT devices
 
 ```java
-iHealthDevicesManager.getInstance().connectDevice("", mac, iHealthDevicesManager.TYPE_550BT)
-
-Bp550BTControl control = iHealthDevicesManager.getInstance().getBp550BTControl(mDeviceMac);
+[[ConnectDeviceController commandGetInstance] commandContectDeviceWithDeviceType:HealthDeviceType_KN550BT andSerialNub:deviceMac];
 ```
 
 ## API reference
@@ -58,175 +45,106 @@ Bp550BTControl control = iHealthDevicesManager.getInstance().getBp550BTControl(m
 The KN-550BT doesn't support this feature above firmware 2.0.0 or later.
 
 ```java
-Bp550BTControl control = iHealthDevicesManager.getInstance().getBp550BTControl(mDeviceMac);
-control.getBattery();
-```
-
-```java
-// Return value
-private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallback() {
-    @Override
-    public void onDeviceNotify(String mac, String deviceType, String action, String message) {
-        if (BpProfile.ACTION_BATTERY_BP.equals(action)) {
-            try {
-                JSONObject obj = new JSONObject(message);
-                int battery = obj.getInt(BpProfile.BATTERY_BP);
-            } catch (JSONException e) {
-                e.printStackTrace();
-            }
-        }
-    } 
-}
+/**
+ * Query battery remaining energy.
+ * @param energyValue  A block to return the device battery remaining energy percentage, ‘80’ stands for 80%.
+ * @param error  A block to return the error in ‘Establish measurement connection’
+ */
+-(void)commandEnergy:(BlockEnergyValue)energyValue errorBlock:(BlockError)error;
 ```
 
 ### Get the number of history data
 
 ```java
-Bp550BTControl control = iHealthDevicesManager.getInstance().getBp550BTControl(mDeviceMac);
-control.getOfflineNum();
-```
-
-```java
-// Return value
-private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallback() {
-    @Override
-    public void onDeviceNotify(String mac, String deviceType, String action, String message) {
-        if (BpProfile.ACTION_HISTORICAL_NUM_BP.equals(action)) {
-            try {
-                JSONObject obj = new JSONObject(message);
-                int count = obj.getInt(BpProfile.HISTORICAL_NUM_BP);
-
-            } catch (JSONException e) {
-                e.printStackTrace();
-            }
-        }
-    } 
-}
+/**
+ * Upload offline data total Count.
+ * @param  totalCount item quantity of total data.
+ * @param error  A block to return the error.
+ */
+-(void)commandTransferMemoryTotalCount:(BlockBachCount)totalCount errorBlock:(BlockError)error;
 ```
 
 ### Get history data
 
 ```java
-Bp550BTControl control = iHealthDevicesManager.getInstance().getBp550BTControl(mDeviceMac);
-control.getOfflineData();
-```
-
-```java
-// Return value
-private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallback() {
-    @Override
-    public void onDeviceNotify(String mac, String deviceType, String action, String message) {
-        if (BpProfile.ACTION_HISTORICAL_NUM_BP.equals(action)) {
-            try {
-                JSONArray historyArr = new JSONArray(message);
-                for (int i = 0; i < historyArr.length(); i++) {
-                    JSONObject obj = historyArr.getJSONObject(i);
-                    String time = obj.getString(BpProfile.MEASUREMENT_DATE_BP);
-                    int sys = obj.getInt(BpProfile.HIGH_BLOOD_PRESSURE_BP)
-                    int dia = obj.getInt(BpProfile.LOW_BLOOD_PRESSURE_BP)
-                    int heartRate = obj.getInt(BpProfile.PULSE_BP)
-                    int ahr = obj.getInt(BpProfile.MEASUREMENT_AHR_BP)
-                    int hsd = obj.getInt(BpProfile.MEASUREMENT_HSD_BP)
-
-                }
-            } catch (JSONException e) {
-                e.printStackTrace();
-            }
-        }
-        }
-    } 
-}
+/**
+ * Upload offline data.
+ * @param  totalCount item quantity of total data
+ * @param  progress upload completion ratio , from 0.0 to 1.0 or 0%~100％, 100% means upload completed.
+ * @param  uploadDataArray    offline data set, including measurement time, systolic pressure, diastolic pressure, pulse rate, irregular judgment. corresponding KEYs are time, sys, dia, heartRate, irregular.
+ * @param error   error codes.
+ * Specification:
+ *   1.  BPError0 = 0: Unable to take measurements due to arm/wrist movements.
+ *   2.  BPError1:  Failed to detect systolic pressure.
+ *   3.  BPError2:  Failed to detect diastolic pressure.
+ *   4.  BPError3:  Pneumatic system blocked or cuff is too tight during inflation.
+ *   5.  BPError4:  Pneumatic system leakage or cuff is too loose during inflation.
+ *   6.  BPError5:  Cuff pressure reached over 300mmHg.
+ *   7.  BPError6:  Cuff pressure reached over 15 mmHg for more than 160 seconds.
+ *   8.  BPError7:  Data retrieving error.
+ *   9.  BPError8:  Data retrieving error.
+ *   10.  BPError9:  Data retrieving error.
+ *   11.  BPError10:  Data retrieving error.
+ *   12.  BPError11:  Communication Error.
+ *   13.  BPError12:  Communication Error.
+ *   14.  BPError13:  Low battery.
+ *   15.  BPError14:  Device bluetooth set failed.
+ *   16.  BPError15:  Systolic exceeds 260mmHg or diastolic exceeds 199mmHg.
+ *   17.  BPError16:  Systolic below 60mmHg or diastolic below 40mmHg.
+ *   18.  BPError17:  Arm/wrist movement beyond range.
+ *   19.  BPNormalError=30:  device error, error message displayed automatically.
+ *   20.  BPOverTimeError:  Abnormal communication.
+ *   21.  BPNoRespondError:  Abnormal communication.
+ *   22.  BPBeyondRangeError:  device is out of communication range.
+ *   23.  BPDidDisconnect:  device is disconnected.
+ *   24.  BPAskToStopMeasure:  measurement has been stopped.
+ *   25.  BPInputParameterError=400:  Parameter input error.
+ */
+-(void)commandTransferMemoryDataWithTotalCount:(BlockBachCount)totalCount progress:(BlockBachProgress)progress dataArray:(BlockBachArray)uploadDataArray errorBlock:(BlockError)error;
 ```
 
 ### Set locat time to KN-550BT
 
 ```java
-Bp550BTControl control = iHealthDevicesManager.getInstance().getBp550BTControl(mDeviceMac);
-control.getFunctionInfo();
-```
-
-```java
-// Return value
-private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallback() {
-    @Override
-    public void onDeviceNotify(String mac, String deviceType, String action, String message) {
-        if (BpProfile.ACTION_FUNCTION_INFORMATION_BP.equals(action)) {
-            try {
-               JSONObject obj = new JSONObject(message);
-               Boolean upAirMeasureFlg    = obj.getBoolean(BpProfile.FUNCTION_IS_UPAIR_MEASURE);
-               Boolean armMeasureFlg      = obj.getBoolean(BpProfile.FUNCTION_IS_ARM_MEASURE);
-               Boolean haveAngleSensorFlg = obj.getBoolean(BpProfile.FUNCTION_HAVE_ANGLE_SENSOR);
-               Boolean haveOfflineFlg     = obj.getBoolean(BpProfile.FUNCTION_HAVE_OFFLINE);
-               Boolean haveHSDFlg         = obj.getBoolean(BpProfile.FUNCTION_HAVE_HSD);
-               Boolean haveAngleSetFlg    = obj.getBoolean(BpProfile.FUNCTION_HAVE_ANGLE_SETTING);
-               Boolean mutableUploadFlg   = obj.getBoolean(BpProfile.FUNCTION_IS_MULTI_UPLOAD);
-               Boolean selfUpdateFlg      = obj.getBoolean(BpProfile.FUNCTION_HAVE_SELF_UPDATE);
-            } catch(JSONException e) {
-                e.printStackTrace();
-            }
-        } 
-    } 
-}
+/**
+ * Synchronize time and judge if the device supports the function of up Air Measurement, arm Measurement, Angle Sensor, Angle Setting, HSD, Offline Memory, mutable Groups Upload, Self Upgrade. ‘True’ means yes or on, ‘False’ means no or off.
+ * @param function  A block to return the function and states that the device supports.
+ * @param error  A block to refer ‘error’ in ‘Establish measurement connection’ in KN550BT.
+ */
+-(void)commandFunction:(BlockDeviceFunction)function errorBlock:(BlockError)error;
 ```
 
 ### Get the KN-550BT display status
 
 ```java
-Bp550BTControl control = iHealthDevicesManager.getInstance().getBp550BTControl(mDeviceMac);
-control.getStatusOfDisplay();
-```
+/**
+ get status of device display
 
-```java
-// Return value
-private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallback() {
-    @Override
-    public void onDeviceNotify(String mac, String deviceType, String action, String message) {
-        if (BpProfile.ACTION_SHOW_CONFIG_BP.equals(action)) {
-            try {
-               JSONObject obj = new JSONObject(message);
-               Boolean isBackLightOn = obj.getBoolean(BpProfile.IS_BACKLIGHT_ON_BP);
-               Boolean isClockOn     = obj.getBoolean(BpProfile.IS_CLOCK_ON_BP);
-               
-            } catch(JSONException e) {
-                e.printStackTrace();
-            }
-        }
-    } 
-}
+ @param displayStatusBlock feedback status
+ @param errorBlock A block to return the error
+ */
+-(void)commandGetStatusOfDisplay:(BlockDisplayStatus)displayStatusBlock error:(BlockError)errorBlock;
 ```
 
 ### Set the KN-550BT display status
 
 ```java
-Bp550BTControl control = iHealthDevicesManager.getInstance().getBp550BTControl(mDeviceMac);
-control.getStatusOfDisplay();
-```
+/**
+ set status of device display
 
-```java
-// Return value
-private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallback() {
-    @Override
-    public void onDeviceNotify(String mac, String deviceType, String action, String message) {
-        if (BpProfile.ACTION_SET_STATUS_DISPLAY_SUCCESS.equals(action)) {
-        
-        }
-    } 
-}
+ @param backLightOn turn on back light or not
+ @param clockOn show clock or not
+ @param successBlock This block return means set success
+ @param errorBlock A block to return the error
+ */
+-(void)commandSetStatusOfDisplayForBackLight:(BOOL)backLightOn andClock:(BOOL)clockOn resultSuccess:(BlockSuccess)successBlock error:(BlockError)errorBlock;
 ```
 
 ### Disconnect KN-550BT device
 
 ```java
-Bp550BTControl control = iHealthDevicesManager.getInstance().getBp550BTControl(mDeviceMac);
-control.disconnect();
-```
-
-```java
-// Return value
-private iHealthDevicesCallback miHealthDevicesCallback = new iHealthDevicesCallback() {
-     @Override
-    public void onDeviceConnectionStateChange(String mac, String deviceType, int status, int errorID, Map manufactorData) { 
-        
-    }
-}
+/**
+ * Disconnect current device
+ */
+-(void)commandDisconnectDevice;
 ```
