--- a/ios_versioned_docs/version-2.7.7/blood_pressure/kd723.md
+++ b/ios_versioned_docs/version-2.7.7/blood_pressure/kd723.md
@@ -5,7 +5,7 @@ sidebar_position: 7
 
 ## WorkFlow
 
-1. Scan and connect KD723 scale.
+1. Scan and connect KD723 blood pressure monitor.
 
 2. KD723 only support offline measurement.
 
