--- a/ios_versioned_docs/version-2.7.7/blood_pressure/kd926.md
+++ b/ios_versioned_docs/version-2.7.7/blood_pressure/kd926.md
@@ -5,7 +5,7 @@ sidebar_position: 8
 
 ## WorkFlow
 
-1. Scan and connect KD926 scale.
+1. Scan and connect KD926 blood pressure monitor.
 
 2. KD926 only support offline measurement.
 
