--- a/ios_versioned_docs/version-2.7.7/blood_pressure/kd723.md
+++ b/ios_versioned_docs/version-2.7.7/blood_pressure/kd723.md
@@ -9,6 +9,9 @@ sidebar_position: 7
 
 2. KD723 only support offline measurement.
 
+
+![integrate ios](/iOS_KD723_1.png)
+
 ## Connection to device
 
 ### 1.Listen to device notify
