--- a/ios_versioned_docs/version-2.7.7/blood_pressure/kd926.md
+++ b/ios_versioned_docs/version-2.7.7/blood_pressure/kd926.md
@@ -9,6 +9,9 @@ sidebar_position: 8
 
 2. KD926 only support offline measurement.
 
+
+![integrate ios](/iOS_KD926_1.png)
+
 ## Connection to device
 
 ### 1.Listen to device notify
