--- a/ios_versioned_docs/version-2.7.7/blood_pressure/kn550.md
+++ b/ios_versioned_docs/version-2.7.7/blood_pressure/kn550.md
@@ -9,6 +9,8 @@ sidebar_position: 6
 
 2. KN-550BT only support offline measurement.
 
+![integrate ios](/iOS_550BT_1.png)
+
 ## Connection to device
 
 ### 1.Listen to device notify
