--- a/docs/ios/blood_pressure/kn550.md
+++ b/docs/ios/blood_pressure/kn550.md
@@ -107,11 +107,14 @@ and the returned data will contain whether the time need to be set. Version 2.0.
  *   23.  BPDidDisconnect:  device is disconnected.
  *   24.  BPAskToStopMeasure:  measurement has been stopped.
  *   25.  BPInputParameterError=400:  Parameter input error.
+ *   26.  BPInvalidOperation = 402:  Invalid Operation
+ *   27.  BPDeviceErrorUnsupported = 403:  Unsupported
+    
  */
 -(void)commandTransferMemoryDataWithTotalCount:(BlockBachCount)totalCount progress:(BlockBachProgress)progress dataArray:(BlockBachArray)uploadDataArray errorBlock:(BlockError)error;
 ```
 
-### Set locat time to KN-550BT
+### Set local time to KN-550BT
 
 ```java
 /**
@@ -160,8 +163,8 @@ and the returned data will contain whether the time need to be set. Version 2.0.
 ### History data transfer finished
 
 :::info
-After history data transfer is finised, this API will help you to clear the history data.
-Only Firmware 2.0.1 and above supprt this feature. other frimware KN-550BT can clear history data automatically.
+After history data transfer is finished, this API will help you to clear the history data.
+Only Firmware 2.0.1 and above supprt this feature. other firmware KN-550BT can clear history data automatically.
 :::
 
 ```java
