--- a/docs/ios/blood_pressure/kn550.md
+++ b/docs/ios/blood_pressure/kn550.md
@@ -160,8 +160,8 @@ and the returned data will contain whether the time need to be set. Version 2.0.
 ### History data transfer finished
 
 :::info
-After history data transfer is finised, this API will help you to clear the history data.
-Only Firmware 2.0.1 and above supprt this feature. other frimware KN-550BT can clear history data automatically.
+After history data transfer is finished, this API will help you to clear the history data.
+Only Firmware 2.0.1 and above supprt this feature. other firmware KN-550BT can clear history data automatically.
 :::
 
 ```java
